--- a/uuid-quasi.cabal
+++ b/uuid-quasi.cabal
@@ -21,8 +21,10 @@ Extra-Source-Files:
      CONTRIBUTORS
 
 Library
- Build-Depends:   uuid, template-haskell, split, base >=3, base < 5 
+ Build-Depends:   uuid >= 1.2.2 && < 1.3, template-haskell, base >=3, base < 5 
  Exposed-Modules: Data.UUID.Quasi
+
+ Extensions:      TemplateHaskell
 
  Ghc-Prof-Options:   -auto-all -caf-all
  Ghc-Options:        -Wall
